Added WithStream method.

--- a/src/Rixian.Drive.Common/Properties/Resources.resx
+++ b/src/Rixian.Drive.Common/Properties/Resources.resx
@@ -123,6 +123,9 @@
   <data name="NoParentOfRootExceptionMessage" xml:space="preserve">
     <value>There is no parent of root.</value>
   </data>
+  <data name="PathAlreadyConatinsStreamExceptionMessage" xml:space="preserve">
+    <value>Unable to add a stream to a path that already contains a stream.</value>
+  </data>
   <data name="PathNullExceptionMessage" xml:space="preserve">
     <value>The path must not be null.</value>
   </data>
